// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package usb;

message USBDeviceInfo {
  uint32 device_id = 1;
  uint32 product_id = 2;
  uint32 vendor_id = 3;
  uint32 device_class = 4;
  uint32 device_subclass = 5;
  uint32 device_protocol = 6;
  string device_name = 7;
  string manufacturer_name = 8;
  string product_name = 9;
}

message USBDeviceEvent {
  enum EventType {
    UNKNOWN = 0;
    USB_DEVICE_ATTACHED = 1;
    USB_DEVICE_DETACHED = 2;
  }
  uint64 timestamp = 1;
  EventType event_type = 2;
  USBDeviceInfo usb_device_info = 3;
}
